--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.9.1</version>
                 <configuration>
                     <useStandardDocletOptions>true</useStandardDocletOptions>
                     <show>public</show>
@@ -169,6 +169,7 @@
                     <version>true</version>
                     <author>true</author>
                     <keywords>true</keywords>
+                    <excludePackageNames>org.osgi.framework.*,com.googlecode.*</excludePackageNames>
                     <links>
                         <link>http://docs.oracle.com/javase/8/docs/api/</link>
                     </links>
