--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <reuseForks>false</reuseForks>
                     <!--
                     Sets the VM argument line used when unit tests are run.
                     Set by jacoco
