--- a/pom.xml
+++ b/pom.xml
@@ -55,15 +55,17 @@
         <guava.version>17.0</guava.version>
         <concurrentlinkedhashmap.version>1.4</concurrentlinkedhashmap.version>
 
-        <spy.version>2.11.4</spy.version>
+        <hystrix.version>1.3.20</hystrix.version>
+        <spy.version>2.11.6</spy.version>
         <jsr666e.version>1.1.0</jsr666e.version>
-        <slf4j.version>1.7.6</slf4j.version>
+        <slf4j.version>1.7.10</slf4j.version>
         <memcachedtest.version>1.0.0</memcachedtest.version>
-        <xxhashing.version>1.2.0</xxhashing.version>
+        <xxhashing.version>1.3.0</xxhashing.version>
         <jsnappy.version>0.3</jsnappy.version>
         <logback.version>1.1.1</logback.version>
         <junit.version>4.11</junit.version>
         <netty.version>4.0.21.Final</netty.version>
+        <fst.version>1.63</fst.version>
     </properties>
     <dependencies>
         <dependency>
@@ -75,6 +77,12 @@
             <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
             <artifactId>concurrentlinkedhashmap-lru</artifactId>
             <version>${concurrentlinkedhashmap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
+            <version>${hystrix.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.spy</groupId>
@@ -105,7 +113,7 @@
         <dependency>
             <groupId>de.ruedigermoeller</groupId>
             <artifactId>fst</artifactId>
-            <version>1.58</version>
+            <version>${fst.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
@@ -259,6 +267,18 @@
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
