--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <guava.version>18.0</guava.version>
         <concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
 
-        <hystrix.version>1.3.20</hystrix.version>
+        <hystrix.version>1.4.5</hystrix.version>
         <spy.version>2.11.6</spy.version>
         <jsr666e.version>1.1.0</jsr666e.version>
         <slf4j.version>1.7.10</slf4j.version>
@@ -76,6 +76,11 @@
             <artifactId>metrics-core</artifactId>
             <version>${metrics.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.ben-manes.caffeine</groupId>-->
+            <!--<artifactId>caffeine</artifactId>-->
+            <!--<version>1.1.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
