--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
         <scala-maven-plugin.version>3.1.6</scala-maven-plugin.version>
-        <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
         <maven-release-plugin.version>2.3.2</maven-release-plugin.version>
         <maven-license-plugin.version>1.10.b1</maven-license-plugin.version>
         <maven-plugin-plugin.version>3.2</maven-plugin-plugin.version>
@@ -94,11 +94,11 @@
             <artifactId>metrics-core</artifactId>
             <version>${metrics.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.github.ben-manes.caffeine</groupId>-->
-            <!--<artifactId>caffeine</artifactId>-->
-            <!--<version>1.1.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>1.3.1</version>
+        </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -337,8 +337,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <reuseForks>false</reuseForks>
+                    <reuseForks>true</reuseForks>
                     <forkMode>always</forkMode>
+                    <parallel>classes</parallel>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
                     <!--
                     Sets the VM argument line used when unit tests are run.
                     Set by jacoco
