--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.greencheek.caching</groupId>
     <artifactId>herdcache</artifactId>
-    <version>1.0.23</version>
+    <version>1.0.24-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>herdcache</name>
