--- a/pom.xml
+++ b/pom.xml
@@ -58,15 +58,15 @@
         <hystrix.version>1.4.5</hystrix.version>
         <spy.version>2.12.0</spy.version>
         <jsr666e.version>1.1.0</jsr666e.version>
-        <slf4j.version>1.7.10</slf4j.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <memcachedtest.version>1.0.0</memcachedtest.version>
         <xxhashing.version>1.3.0</xxhashing.version>
         <jsnappy.version>1.1.1.7</jsnappy.version>
-        <logback.version>1.1.1</logback.version>
+        <logback.version>1.1.3</logback.version>
         <junit.version>4.11</junit.version>
-        <netty.version>4.0.29.Final</netty.version>
+        <netty.version>4.0.30.Final</netty.version>
         <fst.version>1.63</fst.version>
-        <jmh.version>1.7.1</jmh.version>
+        <jmh.version>1.10.4</jmh.version>
         <metrics.version>3.1.0</metrics.version>
     </properties>
     <dependencies>
@@ -347,7 +347,7 @@
                     Sets the VM argument line used when unit tests are run.
                     Set by jacoco
                      -->
-                    <argLine>${surefireArgLine} -Dio.netty.leakDetectionLevel=paranoid -Dnet.spy.log.LoggerImpl=net.spy.memcached.compat.log.SLF4JLogger</argLine>
+                    <argLine>${surefireArgLine} -Dio.netty.leakDetectionLevel=paranoid -Dnet.spy.log.LoggerImpl=net.spy.memcached.compat.log.SLF4JLogger -server -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:StartFlightRecording=settings=profile -XX:FlightRecorderOptions=defaultrecording=true,settings=profile,disk=true,repository=target/jfr,maxsize=1g,dumponexit=true,dumponexitpath=target/jfr</argLine>
                     <!-- Skips unit tests if the value of skip.unit.tests property is true -->
                     <skipTests>${skip.unit.tests}</skipTests>
                     <!-- Excludes integration tests when unit tests are run. -->
