--- a/pom.xml
+++ b/pom.xml
@@ -56,19 +56,20 @@
         <concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
 
         <hystrix.version>1.4.5</hystrix.version>
-        <spy.version>2.12.1</spy.version>
+        <spy.version>2.12.3</spy.version>
         <jsr666e.version>1.1.0</jsr666e.version>
-        <slf4j.version>1.7.12</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <memcachedtest.version>1.0.0</memcachedtest.version>
         <xxhashing.version>1.3.0</xxhashing.version>
-        <jsnappy.version>1.1.1.7</jsnappy.version>
+        <jsnappy.version>1.1.4</jsnappy.version>
         <logback.version>1.1.3</logback.version>
         <junit.version>4.11</junit.version>
-        <netty.version>4.0.41.Final</netty.version>
+        <netty.version>4.0.49.Final</netty.version>
         <fst.version>1.63</fst.version>
         <jmh.version>1.10.4</jmh.version>
         <metrics.version>3.1.0</metrics.version>
-        <rx.version>1.2.0</rx.version>
+        <!--<rx.version>2.1.0</rx.version>-->
+        <rx.version>1.3.0</rx.version>
     </properties>
     <dependencies>
         <!--<dependency>-->
