--- a/pom.xml
+++ b/pom.xml
@@ -39,17 +39,17 @@
     </scm>
 
     <properties>
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-        <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
-        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-        <scala-maven-plugin.version>3.1.6</scala-maven-plugin.version>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-        <maven-release-plugin.version>2.3.2</maven-release-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+        <scala-maven-plugin.version>3.3.1</scala-maven-plugin.version>
+        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-license-plugin.version>1.10.b1</maven-license-plugin.version>
-        <maven-plugin-plugin.version>3.2</maven-plugin-plugin.version>
-        <maven-shade-plugin.version>2.2</maven-shade-plugin.version>
-        <maven-site-plugin.version>3.3</maven-site-plugin.version>
+        <maven-plugin-plugin.version>3.5</maven-plugin-plugin.version>
+        <maven-shade-plugin.version>3.1.0.1</maven-shade-plugin.version>
+        <maven-site-plugin.version>3.6</maven-site-plugin.version>
         <logback.version>1.1.5</logback.version>
 
         <guava.version>19.0</guava.version>
@@ -66,7 +66,7 @@
         <junit.version>4.11</junit.version>
         <netty.version>4.0.49.Final</netty.version>
         <fst.version>1.63</fst.version>
-        <jmh.version>1.10.4</jmh.version>
+        <jmh.version>1.19</jmh.version>
         <metrics.version>3.1.0</metrics.version>
         <!--<rx.version>2.1.0</rx.version>-->
         <rx.version>1.3.0</rx.version>
@@ -212,11 +212,30 @@
         </dependency>
     </dependencies>
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.7.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.0.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-toolchains-plugin</artifactId>
+                    <version>1.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.5.201505241946</version>
+                <version>0.7.9</version>
                 <executions>
                     <!--
                        Prepares the property pointing to the JaCoCo runtime agent which
@@ -266,12 +285,34 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <!--<version>3.1</version>-->
+                <version>3.7.0</version>
                 <configuration>
-                    <compilerVersion>1.8</compilerVersion>
+                    <fork>true</fork>
+                    <!--<executable>javac9</executable>-->
+                    <!--<compilerVersion>1.8</compilerVersion>-->
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>1.9</version>
+                            <vendor>oracle</vendor>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -322,12 +363,23 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>${maven-assembly-plugin.version}</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>
+                                org.greencheek.caching.herdcache
+                            </Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -348,6 +400,7 @@
                 <configuration>
                     <reuseForks>true</reuseForks>
                     <forkCount>2C</forkCount>
+                    <!--<jvm>/Library/Java/JavaVirtualMachines/jdk-9.0.1.jdk/Contents/Home/bin</jvm>-->
                     <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
                     <!--
                     Sets the VM argument line used when unit tests are run.
@@ -365,6 +418,13 @@
                     </excludes>
 
                 </configuration>
+                <!--<dependencies>-->
+                    <!--<dependency>-->
+                        <!--<groupId>org.junit.platform</groupId>-->
+                        <!--<artifactId>junit-platform-surefire-provider</artifactId>-->
+                        <!--<version>1.0.2</version>-->
+                    <!--</dependency>-->
+                <!--</dependencies>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
