--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,16 @@
         <netty.version>4.0.49.Final</netty.version>
         <fst.version>1.63</fst.version>
         <jmh.version>1.19</jmh.version>
-        <metrics.version>3.1.0</metrics.version>
-        <!--<rx.version>2.1.0</rx.version>-->
-        <rx.version>1.3.0</rx.version>
+
+
+
+        <!-- java9 amn not available yet -->
+        <metrics.version>4.0.0</metrics.version>
+        <rx.version>1.3.4</rx.version>
+
+
+        <!-- java9 amn available -->
+        <rxjava2.version>2.1.8</rxjava2.version>
     </properties>
     <dependencies>
         <!--<dependency>-->
